# rayflux

./: Cargo.toml  README.md
rayflux/: Cargo.toml
rayflux/src/: lib.rs
rayflux/src/common/: camera.rs  color.rs  gpu_context.rs  material.rs  object.rs  scene.rs  transform.rs
rayflux/src/raytracer/: mod.rs
rayflux/src/raytracer/cpu/: intersections.rs
rayflux/src/raytracer/cpu/shapes/: cube.rs  cylinder.rs  mod.rs  plane.rs  sphere.rs
rayflux_file/: Cargo.toml
rayflux_file/src/: app.rs  main.rs
rayflux_window/: Cargo.toml
rayflux_window/src/: app.rs  main.rs  ui.rs
src/: app.rs  main.rs
src/common/: material.rs  mod.rs  object.rs  scene.rs  shapes.rs  transform.rs
src/engine/: camera.rs  gpu_context.rs  gui.rs  mod.rs  renderer.rs  scene.rs  world.rs
src/features/: ui.rs
src/output/: file.rs  mod.rs  render.wgsl  ui.rs  window.rs
src/output/window/: mod.rs
src/raytracer/: cpu.rs  gpu.rs  mod.rs
src/raytracer/cpu/: canvas.rs  intersections.rs  mod.rs  ray.rs  shapes.rs
src/raytracer/cpu/shapes/: cube.rs  cylinder.rs  mod.rs  plane.rs  sphere.rs
src/shaders/: compute.wgsl  render.wgsl
