[package]
name = "rayflux_window"
version = "0.1.0"
edition = "2021"

[dependencies]
rayflux = { path = "../rayflux" }
clap = { version = "4.5.40", features = ["derive"] }
egui = "0.31.1"
egui-wgpu = "0.31.1"
egui-winit = "0.31.1"
glam = "0.30.3"
log = "0.4.27"
pollster = "0.4.0"
winit = "0.30.11"
env_logger = "0.11.8"
